Add chrome menu when button pressed.

--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -10,6 +10,7 @@
 	},
 
 	"browser_action": {
-		"default_title": "Review Board Screenshot Tool"
+		"default_title": "Review Board Screenshot Tool",
+		"default_popup": "popup.html"
 	}
 }
