--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -4,9 +4,9 @@
 	"version": "1.0",
 
 	"icons": {
-		"16": "icons/icon16.png",
-		"48": "icons/icon48.png",
-	   "128": "icons/icon128.png"
+		"16": "images/icons/icon16.png",
+		"48": "images/icons/icon48.png",
+	   "128": "images/icons/icon128.png"
 	},
 
 	"browser_action": {
