--- a/crx/manifest.json
+++ b/crx/manifest.json
@@ -2,6 +2,10 @@
 	"manifest_version": 2,
 	"name": "Review Board Screenshot Extension",
 	"version": "1.0",
+	"background": {
+		"persistent": false,
+		"scripts": ["js/background.js"]
+	},
 
 	"icons": {
 		"16": "images/icons/icon16.png",
@@ -12,5 +16,7 @@
 	"browser_action": {
 		"default_title": "Review Board Screenshot Tool",
 		"default_popup": "popup.html"
-	}
+	},
+
+	"permissions": ["activeTab"]
 }
