--- a/xpi/package.json
+++ b/xpi/package.json
@@ -8,5 +8,8 @@
   "engines": {
     "firefox": ">=38.0a1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "permissions": {
+    "multiprocess": true
+  }
 }
