--- a/xpi/package.json
+++ b/xpi/package.json
@@ -2,7 +2,7 @@
   "title": "Review Board Screenshot Tool",
   "name": "rb-screenshot",
   "version": "0.0.1",
-  "description": "Tool for Review Board that allows you to take screenshots and send them to a review board server.",
+  "description": "Tool for Review Board that allows you to take screenshots and send them to a Review Board server.",
   "main": "index.js",
   "author": "Review Board",
   "engines": {
